--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy<2
 pandas>=1.5.3
 scikit-learn>=1.3.0
 lightgbm>=4.3.2
+shap>=0.43.0
 
 # MLOps
 mlflow>=2.6.1
@@ -11,6 +12,7 @@ mlflow>=2.6.1
 openai>=1.0.0
 faiss-cpu>=1.7.4
 chromadb>=0.4.7
+sentence-transformers>=2.2.2
 
 # Backend / API
 fastapi>=0.111.2
